tests/style/dir_exclusions/expected_out.txt
=== PLAIN MODE ===
In inc/test.m, line 3
| _not_fine_;
| ^ lex error: unexpected character '_'
MISS_HIT Style Summary: 2 file(s) analysed, 1 error(s); 2 file(s) excluded from analysis

=== HTML MODE ===
MISS_HIT Style Summary: 2 file(s) analysed, 1 error(s); 2 file(s) excluded from analysis
